# Quizter

./: Dockerfile  LICENSE  README.md
.do/: app.yaml
.github/workflows/: build-release.yml
assets/questions/: american_history.json  black_history.json  board_games.json  book_of_mormon.json  car_maintenace.json  chemistry.json  church_of_jesus_christ_history.json  classic_literature.json  computers.json  doctrine_and_covenants.json  ecology.json  electronics.json  general_conference_april_2025.json  general_conference_october_2025.json  geography.json  health.json  mathmatics.json  music.json  new_testament.json  old_testament.json  personal_finance.json  preach_my_gospel.json  prophets.json  science.json  us_geography.json  us_states.json  world_history.json
docs/: acceptance_checklist.md  build_notes.md  build_plan.md  hosted_phase1_checklist.md  hosted_transformation_plan.md  managed_hosting_checklist.md
scripts/: build_release.sh  smoke_hosted_flow.sh  verify_artifacts.sh
server/: Cargo.toml
server/data/: questions.json
server/src/: main.rs
web/admin/: admin.html
web/home/: home.html
web/player/: player.html
